<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBookScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/icon" />

        <TextView
            android:id="@+id/textViewBookImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:paddingTop="20dp"
            android:text="Book Image:" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cameraButton"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:background="@drawable/custom_button2"
            android:text="@string/camera"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/uploadImageButton"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:background="@drawable/custom_button2"
            android:text="@string/upload_image"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <ImageView
            android:id="@+id/bookImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textViewBookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:paddingTop="20dp"
            android:text="@string/book_title" />

        <EditText
            android:id="@+id/editTextBookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textViewAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:paddingTop="20dp"
            android:text="@string/author" />

        <EditText
            android:id="@+id/editTextAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textViewPublisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:paddingTop="20dp"
            android:text="@string/publisher" />

        <EditText
            android:id="@+id/editTextTextPublisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:paddingTop="20dp"
            android:text="@string/book_description" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:ems="10"
            android:inputType="textPersonName" />


        <TextView
            android:id="@+id/textViewDateAcquired"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:paddingTop="20dp"
            android:text="@string/date_acquired" />

        <EditText
            android:id="@+id/editTextDateAcquired"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />



        <TextView
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addBookButton"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:background="@drawable/custom_button2"
            android:text="@string/add_book"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="20dp" />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backButton"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:background="@drawable/custom_button2"
            android:text="@string/my_books_list"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/homeScreen"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:background="@drawable/custom_button2"
            android:text="@string/back_to_home_screen"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>