<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddCategoryScreen"
    android:gravity="center_horizontal"
    android:padding="20dp">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/textViewCategoryLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Category Name:"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:paddingTop="20dp"/>

    <EditText
        android:id="@+id/editTextCategoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/textViewCategoryGoalLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="How Many Books Would You Like To Own In This Category:
"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:paddingTop="20dp"/>

    <EditText
        android:id="@+id/editTextCategoryGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/AddCategoryAndGoal"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:background="@drawable/custom_button2"
        android:text="@string/add_category_and_goal"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButton4"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:background="@drawable/custom_button2"
        android:text="@string/category_list"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButton6"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:background="@drawable/custom_button2"
        android:text="@string/home_screen"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"/>
</LinearLayout>